--- a/my-favorite-movie/index.html
+++ b/my-favorite-movie/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>My Favorite Movie</title>
+    /* Ge edited */
+    <title>DEZE SITE IS GE EDITED</title>
 </head>
 <header class="header">
     <div class="header-text">
